test/reject/fused_reduction.rk
crunch fused_reduce(values: f32s) -> f32:
  | result: f32 <| sum(values)
  return result
